force-app/main/default/objects/Question__c/fields/Available_in_Pool__c.field-meta.xml
<CustomField>
    <fullName>Available_in_Pool__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Available in Pool</label>
    <type>Checkbox</type>
</CustomField>