force-app/main/default/objects/Question__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Soft Skills</fullName>
            </value>
            <value>
                <fullName>Technical Skills</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>