force-app/main/default/objects/Question__c/fields/For_Manager__c.field-meta.xml
<CustomField>
    <fullName>For_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Manager</label>
    <type>Checkbox</type>
</CustomField>