force-app/main/default/objects/Question__c/validationRules/Category_Must_be_picked.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_Must_be_picked</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK(TEXT(Category__c)))</errorConditionFormula>
    <errorMessage>An empty category cannot be inserted</errorMessage>
</ValidationRule>