force-app/main/default/objects/Question__c/validationRules/PointsRange.validationRule-meta.xml
<ValidationRule>
    <fullName>PointsRange</fullName>
    <active>false</active>
    <errorConditionFormula>OR(Points__c &lt; 1,Points__c &gt; 10)</errorConditionFormula>
    <errorDisplayField>Points__c</errorDisplayField>
    <errorMessage>Value must be between 1 and 10</errorMessage>
</ValidationRule>