force-app/main/default/objects/Question__c/validationRules/Question_Must_have_Text.validationRule-meta.xml
<ValidationRule>
    <fullName>Question_Must_have_Text</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Question_Text__c ) = 0</errorConditionFormula>
    <errorMessage>Question must have text</errorMessage>
</ValidationRule>